--- a/templates/main/maindarkmode.html
+++ b/templates/main/maindarkmode.html
@@ -228,6 +228,24 @@
         <!-- Sidebar Menu -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <i class="nav-icon fa fa-lock"></i>
+                <p>
+                  ADMIN
+                  <i class="right fas fa-angle-left"></i>
+                </p>
+              </a>
+              <ul class="nav nav-treeview">
+                <li class="nav-item">
+                  <a href="/roles" class="nav-link">
+                    <i class="far fa-circle nav-icon text-info"></i>
+                    <p>User / Roles</p>
+                  </a>
+                </li>
+              </ul>
+            </li>
             <!-- <li class="nav-header ">สำหรับแผนก IT</li>
             Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
