--- a/templates/comments.html
+++ b/templates/comments.html
@@ -39,7 +39,7 @@
           <div class="form-group">
             <label for="customFile">เอกสารประกอบ(ถ้ามี)</label>
             <div class="custom-file">
-              <input type="file" class="custom-file-input" id="customFile" accept="image/x-png,image/gif,image/jpeg,application/pdf" name="file">
+              <input type="file" class="custom-file-input" id="customFile" accept="image/png,image/gif,image/jpeg,application/pdf" name="file">
               <label class="custom-file-label" for="customFile">Choose file</label>
             </div>
           </div>
