--- a/templates/leave0.html
+++ b/templates/leave0.html
@@ -40,7 +40,7 @@
                     <label for="customRadio3" class="custom-control-label">ลาป่วย</label>
                   </div>
                   <div class="custom-control custom-radio">
-                    <input class="custom-control-input" type="radio" id="customRadio4" value="ลาอื่นๆ" name="leavetype" onChange="checkradio();" required>
+                    <input class="custom-control-input" type="radio" id="customRadio4" value="" name="leavetype" onChange="checkradio();" required>
                     <label for="customRadio4" class="custom-control-label" style="width:30%">ลาอื่นๆ</label>
                     <input type="text" class="form-control" id="leaveother" name="leavetypeother" value="" title="กรุณาใส่ข้อมูลให้ครบ" placeholder="ระบุ" style="border-top: none;border-left: none;border-right: none;display:none;" required>
                   </div>
@@ -76,7 +76,7 @@
               </div>
               <div class="form-group">
                 <label>เหตุผล:</label>
-                <textarea class="form-control " rows="3" name="causedetail" id="causedetail" title="กรุณาใส่ข้อมูลให้ครบ" required></textarea>
+                <textarea class="form-control" rows="3" name="causedetail" id="causedetail" title="กรุณาใส่ข้อมูลให้ครบ" required></textarea>
               </div>
 
               <div class="form-group">
