--- a/templates/detailleave.html
+++ b/templates/detailleave.html
@@ -42,10 +42,12 @@
                   <label for="customRadio3" class="custom-control-label">ลาป่วย</label>
                 </div>
                 <div class="custom-control custom-radio">
-                  {% if detailleave.3 == 'ลาอื่นๆ' %}
+                  {% if detailleave.3 != 'ลากิจ' or detailleave.3 != 'ลาพักร้อน' or detailleave.3 != 'ลาป่วย' %}
                   <input class="custom-control-input" type="radio" id="customRadio4" value="ลาอื่นๆ" name="leavetype" checked disabled>
-                  {% endif %}
                   <label for="customRadio4" class="custom-control-label">ลาอื่นๆ</label>
+
+                  <input type="text" class="form-control" value="{{detailleave.3}}" style="border-top: none;border-left: none;border-right: none;background:none" readonly>
+                  {% endif %}
                 </div>
               </div>
             </div>
